src/objects/LenderLink__c.object
<CustomObject><fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checking whether the fields value is active or not</description>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Link_sequence__c</fullName>
        <label>Link sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <required>true</required>
        <type>Url</type>
    </fields><fields>
        <fullName>Visible_if_QLMS_AE_Assigned_to_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This link only be seen when there is an assigned QLMS Account Executive to the partner.</inlineHelpText>
        <label>Visible if QLMS AE Assigned to Partner</label>
        <type>Checkbox</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Read</externalSharingModel><label>LenderLink</label><nameField>
        <label>Link Text</label>
        <type>Text</type>
    </nameField><pluralLabel>LenderLink</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>URL__c</columns>
        <columns>IsActive__c</columns>
        <columns>Link_sequence__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All LenderLinks</label>
    </listViews></CustomObject>